--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,10 @@
     <string name="user_password">Password</string>
     <string name="user_repassorwd">Re-type your Password</string>
     <string name="user_email">Email</string>
-    <string name="hint_username">Enter your username</string>
+    <string name="hint_username">Enter your mail adress</string>
     <string name="hint_password">Enter your password</string>
     <string name="user_login">Login</string>
     <string name="user_cansel_register">Cancel</string>
     <string name="user_register">Register</string>
+    <string name="home_create_product">Create product</string>
 </resources>
