--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="user_cansel_register">Cancel</string>
     <string name="user_register">Register</string>
     <string name="home_create_product">Create product</string>
+    <string name="home_stat">Statistics</string>
 </resources>
